[workspace]
members = [
    "src/homebank-cli",
    "src/homebank-db",
]

[workspace.dependencies]
homebank_cli = { path = "src/homebank-cli" }
homebank_db = { path = "src/homebank-db" }
clap = { version = "3", features = ["derive", "cargo", "regex"] }
thiserror = "1.0.30"

[workspace.package]
name = "hb"
version = "0.2.0"
edition = "2021"
authors = ["James Hawley <developer@jrhawley.ca>"]
license = "GPL-2.0"
rust-version = "1.64"
