[package]
name = "hb"
version = "0.2.0"
edition = "2021"
authors = ["James Hawley <developer@jrhawley.ca>"]
description = "Query and operate on your HomeBank database from the command line."
keywords = ["cli", "terminal", "finance"]
categories = ["command-line-utilities"]
license = "GPL-2.0"

[dependencies]
anyhow = "1.0.54"
dirs = "4.0.0"
homebank_db = { path = "../homebank-db" }
indicatif = "0.16.2"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
structopt = "0.3.26"
thiserror = "1.0.30"
toml = "0.5.8"

[[bin]]
name = "hb"
path = "src/main.rs"
