[package]
name = "hb"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = ["command-line-utilities"]
description = "Query and operate on your HomeBank database from the command line."
keywords = ["cli", "terminal", "finance"]

[dependencies]
anyhow = "1.0.54"
clap = { workspace = true }
dirs-next = "2.0.0"
homebank_db = { workspace = true }
indicatif = "0.16.2"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = { workspace = true }
toml = "0.5.8"

[[bin]]
name = "hb"
path = "src/main.rs"
