[package]
name = "homebank_db"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
kronos = "0.1.5"
lazy_static = "1.4.0"
regex = "1.5.5"
semver = "1.0.5"
structopt = "0.3.26"
thiserror = "1.0.30"
xml-rs = "0.8.4"
