[package]
name = "homebank_db"
version = "0.2.0"
edition = "2021"
authors = ["James Hawley <developer@jrhawley.ca>"]
description = "Query and operate on your HomeBank database."
keywords = ["database", "library", "finance"]
license = "GPL-2.0"

[dependencies]
chrono = "0.4.19"
kronos = "0.1.5"
lazy_static = "1.4.0"
regex = "1.5.5"
semver = "1.0.5"
structopt = "0.3.26"
thiserror = "1.0.30"
xml-rs = "0.8.4"

[lib]
name = "homebank_db"
path = "src/lib.rs"
