[package]
name = "homebank_db"
version = { workspace =  true }
edition = { workspace = true }
authors = { workspace = true }
keywords = ["database", "library", "finance"]
license = { workspace = true }
description = "Query and operate on your HomeBank database."

[dependencies]
chrono = { version = "0.4", default-features = false }
clap = { workspace = true }
kronos = "0.1.5"
lazy_static = "1.4.0"
regex = "1.5.5"
semver = "1.0.5"
thiserror = { workspace = true }
xml-rs = "0.8.4"

[lib]
name = "homebank_db"
path = "src/lib.rs"
